--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,5 @@
 # Dockerfile pour l'application Flask de classification d'images
-FROM python:3.11-slim
+FROM python:3.12
 
 # Variables d'environnement
 ENV PYTHONDONTWRITEBYTECODE=1
@@ -8,8 +8,7 @@ ENV FLASK_APP=app_correct.py
 ENV FLASK_ENV=production
 
 # Installation des dépendances système
-RUN apt-get update --fix-missing && \
-    apt-get install -y --no-install-recommends \
+RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
     libgl1-mesa-glx \
