--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -11,7 +11,7 @@ ENV FLASK_ENV=production
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
-    libgl1-mesa-glx \
+    libgl1 \
     libglib2.0-0 \
     libsm6 \
     libxext6 \
