--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.9.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
+dnspython==2.8.0
 filelock==3.19.1
 Flask==3.1.2
 flatbuffers==25.2.10
@@ -47,6 +48,8 @@ packaging==25.0
 pillow==11.3.0
 protobuf==6.32.1
 Pygments==2.19.2
+pymongo==4.15.0
+python-dotenv==1.1.1
 requests==2.32.5
 rich==14.1.0
 setuptools==80.9.0
