--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 absl-py==2.3.1
+APScheduler==3.10.4
 astunparse==1.6.3
 blinker==1.9.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
+colorhash==2.1.0
+configparser==7.2.0
 dnspython==2.8.0
 filelock==3.19.1
 Flask==3.1.2
+Flask-MonitoringDashboard==4.0.4
 flatbuffers==25.2.10
 fsspec==2025.9.0
 gast==0.6.0
 google-pasta==0.2.0
+greenlet==3.2.4
 grpcio==1.74.0
 gunicorn==23.0.0
 h5py==3.14.0
@@ -47,13 +52,17 @@ optree==0.17.0
 packaging==25.0
 pillow==11.3.0
 protobuf==6.32.1
+psutil==7.1.0
 Pygments==2.19.2
 pymongo==4.15.0
 python-dotenv==1.1.1
-requests==2.32.5
+pytz==2025.2
+requests==2.32.0
 rich==14.1.0
+scipy==1.16.2
 setuptools==80.9.0
 six==1.17.0
+SQLAlchemy==2.0.43
 sympy==1.14.0
 tensorboard==2.20.0
 tensorboard-data-server==0.7.2
@@ -61,6 +70,7 @@ termcolor==3.1.0
 torch==2.8.0
 triton==3.4.0
 typing_extensions==4.15.0
+tzlocal==2.0.0
 urllib3==2.5.0
 Werkzeug==3.1.3
 wheel==0.45.1
