--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 absl-py==2.3.1
 APScheduler==3.10.4
+asttokens==3.0.0
 astunparse==1.6.3
 blinker==1.9.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
 colorhash==2.1.0
+comm==0.2.3
 configparser==7.2.0
+debugpy==1.8.17
+decorator==5.2.1
 dnspython==2.8.0
+executing==2.2.1
 filelock==3.19.1
 Flask==3.1.2
 Flask-MonitoringDashboard==4.0.4
@@ -20,17 +25,25 @@ grpcio==1.74.0
 gunicorn==23.0.0
 h5py==3.14.0
 idna==3.10
+ipykernel==6.30.1
+ipython==9.5.0
+ipython_pygments_lexers==1.1.1
 itsdangerous==2.2.0
+jedi==0.19.2
 Jinja2==3.1.6
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 keras==3.11.3
 libclang==18.1.1
 Markdown==3.9
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml_dtypes==0.5.3
 mpmath==1.3.0
 namex==0.1.0
+nest-asyncio==1.6.0
 networkx==3.5
 numpy==2.3.3
 nvidia-cublas-cu12==12.8.4.1
@@ -50,28 +63,40 @@ nvidia-nvtx-cu12==12.8.90
 opt_einsum==3.4.0
 optree==0.17.0
 packaging==25.0
+parso==0.8.5
+pexpect==4.9.0
 pillow==11.3.0
+platformdirs==4.4.0
+prompt_toolkit==3.0.52
 protobuf==6.32.1
 psutil==7.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 Pygments==2.19.2
 pymongo==4.15.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
+pyzmq==27.1.0
 requests==2.32.0
 rich==14.1.0
 scipy==1.16.2
 setuptools==80.9.0
 six==1.17.0
 SQLAlchemy==2.0.43
+stack-data==0.6.3
 sympy==1.14.0
 tensorboard==2.20.0
 tensorboard-data-server==0.7.2
 termcolor==3.1.0
 torch==2.8.0
+tornado==6.5.2
+traitlets==5.14.3
 triton==3.4.0
 typing_extensions==4.15.0
 tzlocal==2.0.0
 urllib3==2.5.0
+wcwidth==0.2.13
 Werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.3
