feat: améliorations application et documentation
- app_correct.py : configuration monitoring optimisée
- templates/result.html : améliorations UI feedback
- config.cfg : configuration monitoring complète
- README.md : documentation projet complète

--- a/app/config.cfg
+++ b/app/config.cfg
@@ -1,17 +1,17 @@
 # config.cfg - Configuration Flask-MonitoringDashboard
-# Les valeurs sensibles (USERNAME, PASSWORD, SECURITY_TOKEN) peuvent être 
+# Les valeurs sensibles (USERNAME, PASSWORD, SECURITY_TOKEN) peuvent être
 # overridées par les variables d'environnement
 
 [dashboard]
 APP_VERSION=1.0
-# URI MongoDB - sera overridé par MONGO_URI si définie
-DATABASE=mongodb://flask_feedback_user:0vVXfKXwiarKv4K4@cluster0.ntcnb.mongodb.net/flask_monitoring?retryWrites=true&w=majority&appName=Cluster0
-# Préfixe pour les collections de monitoring
+# IMPORTANT: Flask-MonitoringDashboard ne supporte que les DB relationnelles
+# La configuration SQLite sera appliquée programmatiquement dans app.py
+# Ne pas définir DATABASE ici pour éviter les conflits
 TABLE_PREFIX=fmd_
 # Activer la collecte automatique des métriques
 AUTOMATIC_OUTLIER_DETECTION=True
 OUTLIER_DETECTION_CONSTANT=2.5
-SAMPLING_PERIOD=20
+SAMPLING_PERIOD=1
 
 [authentication]
 # Valeurs par défaut - peuvent être overridées par les variables d'environnement
@@ -25,9 +25,9 @@ TIMEZONE=Europe/Paris
 COLORS={'main': '#007bff', 'static': '#28a745'}
 
 [database]
-# Configuration spécifique MongoDB
-DATABASE_NAME=flask_monitoring
-COLLECTION_PREFIX=fmd_
+# Configuration SQLite sera appliquée programmatiquement
+# DATABASE_NAME sera défini dans app.py
+TABLE_PREFIX=fmd_
 
 [monitoring]
 # Surveiller les endpoints spécifiques
